add total and new vaccines to cases menu, edit font-size on currentData on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
-    <link href="css/styles.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+   <!--  <link href="css/styles.min.css" rel="stylesheet" type="text/css"> -->
     <meta name="description"
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic.">
     <!--Facebook-->
@@ -206,7 +206,8 @@
                 <span class="flex-span bckg-sprite" id="dropDownArrow"></span> 
             </div>
             <div id="casesMenu">
-                <button type="button" class="cases-btns" data-category="cases" data-prop="vaccinations">Vaccinations</button>
+                <button type="button" class="cases-btns" data-category="cases" data-prop="totalVaccinations">Total Vaccinations</button>
+                <button type="button" class="cases-btns" data-category="cases" data-prop="newVaccinations">New Vaccinations</button>
                 <button type="button" class="cases-btns" data-category="cases" data-prop="casesPerMil">Cases/Million</button>
                 <button type="button" class="cases-btns" data-category="cases" data-prop="newCases">New Cases</button>
                 <button type="button" class="cases-btns" data-category="cases" data-prop="totalCases">Total Cases</button>
