--- a/public/index.html
+++ b/public/index.html
@@ -182,10 +182,10 @@
             <span id="closeDash" class="closeBtn" title="Close Dashboard">X</span>
         </header>
         <div id="switchWrapper">
-            <svg id="switchSVG" width="300" height="148" xmlns="http://www.w3.org/2000/svg">
+            <svg id="switchSVG" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
                 <g id="switchG" fill="#68d0f4" width="64" height="64" transform="matrix(1, 0, 0, 1, 118, 42)">
-                    <rect stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64" rx="10" height="20"/>
-                    <rect stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64" rx="10" height="20" transform="rotate(90 32,32)"/>
+                    <rect class="switch-rect" stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64" rx="10" height="20"/>
+                    <rect class="switch-rect" stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64" rx="10" height="20" transform="rotate(90 32,32)"/>
                     <circle id="switchCircle" r='8' cx='10' cy='32' fill='#1e1e1e'></circle>
                     <circle class="switch-target-circles" r='8' cx='10' cy='32' fill='#000' data-cat="cases"><title>Toggle Cases</title></circle>
                     <circle class="switch-target-circles" r='8' cx='32' cy='10' fill='#000' data-cat="tests"><title>Toggle Tests</title></circle>
