Add globalInstructions for tap/press on mobile, make no-hover class responsive onresize, Fix onresize responsiveness with is_touch_device, Add globalHelpTipHandler function

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,9 @@
             type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#f44336', 'M4M42OFFV'); kofiwidget2.draw();</script>
     </nav>
     <!-- GLOBAL ELEMENTS -->
+    <div id="globalInstructions" class="ease-out">
+        <p></p>
+    </div>
     <div id="resultsWrapper">
     </div>
     <div id="countryPopup" class="transform"> </div>
