Add floorVal for chart and roundVal for ceiling other data, Install csv-parser to project, Add csv vaccine data to countriesList, Edit help tip text, Make all stats ratio and percent based, Add getPercRangeList function for percent based stats, Edit popup dynamic text for each prop

--- a/public/index.html
+++ b/public/index.html
@@ -212,11 +212,10 @@
             </div>
             <div id="casesMenu">
                 <button type="button" class="cases-btns" data-category="cases" data-prop="casesPerMil">Cases/Million</button>
-                <button type="button" class="cases-btns" data-category="cases" data-prop="newCases">New Cases</button>
-                <button type="button" class="cases-btns" data-category="cases" data-prop="totalCases">Total Cases</button>
-                <button type="button" class="cases-btns" data-category="cases" data-prop="totalRecovered">Recovered</button>  
-                <button type="button" class="cases-btns" data-category="cases" data-prop="activeCases">Active</button>
-                <button type="button" class="cases-btns" data-category="cases" data-prop="seriousCritical">Critical</button>
+                <button type="button" class="cases-btns" data-category="cases" data-prop="newCasesPerMil">New Daily Cases</button>
+                <button type="button" class="cases-btns" data-category="cases" data-prop="percRecovered">Recovered</button>  
+                <button type="button" class="cases-btns" data-category="cases" data-prop="percActive">Active</button>
+                <button type="button" class="cases-btns" data-category="cases" data-prop="percCritical">Critical</button>
             </div>
             <div id="testsMenu">
                 <button type="button" class="tests-btns" data-category="tests" data-prop="testsPerMil">Tests/Million</button>
@@ -225,13 +224,13 @@
             </div>
             <div id="deathsMenu">
                 <button type="button" class="deaths-btns" data-category="deaths" data-prop="deathsPerMil">Deaths/Million</button>
-                <button type="button" class="deaths-btns" data-category="deaths" data-prop="newDeaths">New Deaths</button>
-                <button type="button" class="deaths-btns" data-category="deaths" data-prop="totalDeaths">Total Deaths</button>
+                <button type="button" class="deaths-btns" data-category="deaths" data-prop="newDeathsPerMil">New Daily Deaths</button>
                 <button type="button" class="deaths-btns" data-category="deaths" data-prop="percDeaths">Case Fatality Rate</button>
             </div>
             <div id="vaccMenu">
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percVacc">Vaccinated</button>
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percFullyVacc">Fully Vaccinated</button>
                 <button type="button" class="vacc-btns" data-category="vaccines" data-prop="totalVaccinations">Total Vaccinations</button>
-                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="newVaccinations">New Vaccinations</button>
             </div>
         </div>
         <div id="statsWrapper">
