update npm packages, add legendhelptip, calculate global vaccines stats, edit worldStats html

--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,9 @@
     <!-- END GLOBAL ELEMENTS -->
     <!-- LEGEND SECTION -->
     <div id="keys">
+        <div id='legendHelpTip' class="help-tip">
+            <p>Hover mouse over color to isolate countries in specific range.</p>
+        </div>
         <span id="closeKeys" class="closeBtn" title="Close Legend">X</span>
         <h2>Legend</h2>
         <p id="keyTitle"></p>
