replace people vaccinated with partially vaccinated

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                 <button type="button" class="deaths-btns" data-category="deaths" data-prop="percDeaths">Case Fatality Rate</button>
             </div>
             <div id="vaccMenu">
-                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percVacc">Vaccinated</button>
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percVacc">Partially Vaccinated</button>
                 <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percFullyVacc">Fully Vaccinated</button>
                 <button type="button" class="vacc-btns" data-category="vaccines" data-prop="totalVaccinations">Total Vaccinations</button>
             </div>
