Remove globalInstrunctions when not on map, edit About why section, remove closePopup visibility when not on country profile, improve error handling when no chart data, add help-tip on all stats on country profile, clean up onResize , replace 414px media query with 520px on css, add onCloseSearch on most actions, add version 2.0 on package.json

--- a/public/index.html
+++ b/public/index.html
@@ -689,8 +689,8 @@
                     <h1>WHY?</h1>
                     <p class="text">Perspective</p>
                 </div>
-                <div class="about-flex-col">
-                    <p class="small-text">There is no shortage of COVID-19 data; however, it is often difficult to decode. In contrast to a cold and stale string of numbers, this interactive map presents a visual context for the current state of the global pandemic.</p>
+                <div class="about-flex-col" style="margin:0;">
+                    <p class="small-text">There is no shortage of COVID-19 data; however, too often it is misrepresented or misconstrued. A spoon of sugar in a gallon of coffee is not nearly as sweet as a spoon of sugar in a cup of coffee. In addition to providing a visual perspective, this site presents data in context, by prioritizing ratio-driven stats and rankings.</p>
                 </div>
             </div>
             <div class="about-flex about-dark-blue">
