minify and consolidate css and js files, push to web

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-   <!--  <link href="css/styles.min.css" rel="stylesheet" type="text/css"> -->
+    <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/styles.min.css" rel="stylesheet" type="text/css">
     <meta name="description"
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic.">
     <!--Facebook-->
@@ -715,11 +715,11 @@
         </div>
     </div>
     <!-- END ABOUT SECTION -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script>
     <script src="js/panzoom.js"></script>
-    <script src="js/chart.js"></script>
+    <script src="js/chart.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
-   <!--  <script src="js/main.min.js"></script> -->
+    <script src="js/main.min.js"></script>
     <script src="js/hammer.min.js"></script> 
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", onDOMLoaded); 
