--- a/public/index.html
+++ b/public/index.html
@@ -204,10 +204,7 @@
                         rx="10" height="20" />
                     <rect class="switch-rect" stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64"
                         rx="10" height="20" transform="rotate(90 32,32)" />
-                    <circle id="switchCircle" r='8' cx='10' cy='32' fill='#1e1e1e'>
-                        <animate id='animateCX' attributeType='XML' attributeName='cx' dur='0.1s' begin="indefinite" fill='freeze'></animate>
-                        <animate id='animateCY' attributeType='XML' attributeName='cy' dur='0.1s' begin="indefinite" fill='freeze'></animate>
-                    </circle>
+                    <circle id="switchCircle" r='8' cx='10' cy='32' fill='#1e1e1e'></circle>
                     <circle class="switch-target-circles" r='8' cx='10' cy='32' fill='#000' data-cat="cases">
                         <title>Toggle Cases</title>
                     </circle>
