Add pan feature on chart for mobile, clean up chart listeners. Remove chart labels and make chart full size of container. Remove full date format on mobile size and keep xList size at 1em. Execute chart prop only when dropdown option is not currentProp. Improve chart.js with proper promises. Scroll to chart top when changing props. Change toggle circle color on light mode. Improve switch toggle tap on on touch devices. Edit us-btn css.

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
                         rx="10" height="20" />
                     <rect class="switch-rect" stroke-linejoin="round" stroke-linecap="round" y="22" x="0" width="64"
                         rx="10" height="20" transform="rotate(90 32,32)" />
-                    <circle id="switchCircle" r='8' cx='10' cy='32' fill='#1e1e1e'></circle>
+                    <circle id="switchCircle" r='8' cx='10' cy='32'></circle>
                     <circle class="switch-target-circles" r='8' cx='10' cy='32' fill='#000' data-cat="cases">
                         <title>Toggle Cases</title>
                     </circle>
