--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
-     <link href="css/styles.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.min.css" rel="stylesheet" type="text/css">
     <meta name="description"
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic.">
     <!--Facebook-->
@@ -121,9 +121,9 @@
         </svg>
     </div>
     <div id='currentDataWrapper'>
-        <div id='globalHelpTip' class="help-tip ease-out">
+        <button id='globalHelpTip' class="help-tip ease-out">
             <p></p>
-        </div>
+        </button>
         <span id="currentData" class="ease-out"></span>
     </div>
     <div id="centerBtn" class="ease-out" title="Full Map View">
@@ -137,55 +137,55 @@
     <!-- END GLOBAL ELEMENTS -->
     <!-- LEGEND SECTION -->
     <div id="keys">
-        <div id='legendHelpTip' class="help-tip">
+        <button id='legendHelpTip' class="help-tip">
             <p>Hover mouse over color to isolate countries in specific range.</p>
-        </div>
+        </button>
         <span id="closeKeys" class="closeBtn" title="Close Legend">X</span>
         <h2>Legend</h2>
         <p id="keyTitle"></p>
         <div class="keys">
             <div class="colors-wrapper">
                 <div id="legendColors" class="colors flex-column">
-                    <div class="color" style="background-color:#013544;"></div>
-                    <div class="color" style="background-color:#035e79;"></div>
-                    <div class="color" style="background-color:#038ebc;"></div>
-                    <div class="color" style="background-color:#04abe3;"></div>
-                    <div class="color" style="background-color:#54cbf2;"></div>
-                    <div class="color" style="background-color:#96dcf4;"></div>
-                    <div class="color" style="background-color:#d6f5ff;"></div>
-                    <div class="color" style="background-color:#9c9c9c;"></div>
+                    <button class="color" style="background-color:#013544;"></button>
+                    <button class="color" style="background-color:#035e79;"></button>
+                    <button class="color" style="background-color:#038ebc;"></button>
+                    <button class="color" style="background-color:#04abe3;"></button>
+                    <button class="color" style="background-color:#54cbf2;"></button>
+                    <button class="color" style="background-color:#96dcf4;"></button>
+                    <button class="color" style="background-color:#d6f5ff;"></button>
+                    <button class="color" style="background-color:#9c9c9c;"></button>
                 </div>
             </div>
             <div class="key-data flex-column">
-                <div class="data-range">
+                <button class="data-range">
                     <div></div>
                     <div class="data-line"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div></div>
                     <div class="data-line-small"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div></div>
                     <div class="data-line"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div></div>
                     <div class="data-line-small"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div></div>
                     <div class="data-line"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div></div>
                     <div class="data-line-small"></div>
-                </div>
-                <div class="data-range">
+                </button>
+                <button class="data-range">
                     <div>0</div>
                     <div class="data-line"></div>
-                </div>
-                <div class="data-range">No Reported Data</div>
+                </button>
+                <button class="data-range">No Reported Data</button>
             </div>
         </div>
     </div>
@@ -799,11 +799,11 @@
         </div>
     </div>
     <!-- END ABOUT SECTION -->
-   <!--  <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script>
     <script src="js/panzoom.js"></script>
     <script src="js/chart.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
-     <script src="js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
     <script src="js/hammer.min.js"></script>
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", onDOMLoaded); 
