Fix vaccine country data on loadUrl

--- a/public/index.html
+++ b/public/index.html
@@ -310,7 +310,7 @@
                 <path d="M69.2 5.43V31.5a33.1 33.1 0 0 0-10.5 0V5.42a5.25 5.25 0 1 1 10.5 0z" fill="#4c4c4c"
                     fill-opacity="0.7" />
                 <path d="M97.77 15.9L84.75 38.47a33.1 33.1 0 0 0-9.1-5.25l13.03-22.57a5.25 5.25 0 1 1 9.1 5.25z"
-                       fill="#333333" fill-opacity="0.8" />
+                    fill="#333333" fill-opacity="0.8" />
                 <path d="M117.3 39.26L94.7 52.3a33.1 33.1 0 0 0-5.25-9.1l22.57-13.03a5.25 5.25 0 0 1 5.25 9.1z"
                     fill="#191919" fill-opacity="0.9" />
                 <animateTransform attributeName="transform" type="rotate"
@@ -758,6 +758,7 @@
                         web development. As sole creator and developer, he hand coded this entire site from scratch, for
                         a smoother user experience.</p>
                     <p class="small-text"><a href="https://aminobelyamani.com" target="blank">aminobelyamani.com</a></p>
+                    <p class="small-text" style="margin-top:10px;"><a href="https://twitter.com/AminoBelyamani" target="blank">@AminoBelyamani</a></p>
                 </div>
             </div>
             <div class="about-flex">
@@ -794,6 +795,16 @@
                             href="https://ourworldindata.org/coronavirus" target="blank">Our World in Data</a></p>
                     <p class="smallest-text">Cameron Appel, Diana Beltekian, Daniel Gavrilov, Charlie Giattino, Joe
                         Hasell, Bobbie Macdonald, Edouard Mathieu, Esteban Ortiz-Ospina, Hannah Ritchie, Max Roser.</p>
+                </div>
+            </div>
+            <div class="about-flex about-dark-blue about-flex-100">
+                <div class="about-flex-title">
+                    <h1>GITHUB</h1>
+                </div>
+                <div class="about-flex-col">
+                    <p class="small-text text-over-blue">Check out the <a class="text-over-blue"
+                            href="https://github.com/aminobelyamani/covid-19-world-map" target="blank">repository</a>
+                        for this site and find out how it was done.</p>
                 </div>
             </div>
         </div>
