Change order for vaccine properties.

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic.">
     <!--Facebook-->
     <meta property="og:url" content="https://worldmapcovid19.com/">
-    <meta property="og:title" content="COVID-19 WORLD MAP" />
-    <meta property="og:site_name" content="COVID-19 WORLD MAP">
+    <meta property="og:title" content="COVID-19 World Map" />
+    <meta property="og:site_name" content="COVID-19 World Map">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en-IN">
     <meta property="og:image" content="https://worldmapcovid19.com/images/og_image.jpg">
@@ -32,7 +32,7 @@
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic." />
     <!--Twitter-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="COVID-19 WORLD MAP" />
+    <meta name="twitter:title" content="COVID-19 World Map" />
     <meta name="twitter:description"
         content="An interactive COVID-19 World Map created and developed by Amino Belyamani. Live updates every 5 minutes. In contrast to a cold and stale string of numbers, this site presents a visual context for the current state of the global pandemic." />
     <meta name="twitter:image" content="https://worldmapcovid19.com/images/og_image.jpg" />
@@ -269,12 +269,9 @@
                     Rate</button>
             </div>
             <div id="vaccMenu">
-                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percVacc">Partially
-                    Vaccinated</button>
-                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percFullyVacc">Fully
-                    Vaccinated</button>
-                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="totalVaccinations">Total
-                    Vaccinations</button>
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percFullyVacc">Fully Vaccinated</button>
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="percVacc">Partially Vaccinated</button>
+                <button type="button" class="vacc-btns" data-category="vaccines" data-prop="totalVaccinations">Total Vaccinations</button>
             </div>
         </div>
         <div id="statsWrapper">
@@ -790,7 +787,7 @@
                 </div>
                 <div class="about-flex-col">
                     <p class="small-text" style="margin-bottom:15px;"><a class="text-over-blue"
-                            href="https://www.worldometers.info/coronavirus/" target="blank">Worldometers</a></p>
+                            href="https://www.worldometers.info/coronavirus/" target="blank">Worldometer</a></p>
                     <p class="small-text" style="margin-bottom:15px;"><a class="text-over-blue"
                             href="https://ourworldindata.org/coronavirus" target="blank">Our World in Data</a></p>
                     <p class="smallest-text">Cameron Appel, Diana Beltekian, Daniel Gavrilov, Charlie Giattino, Joe
@@ -810,11 +807,11 @@
         </div>
     </div>
     <!-- END ABOUT SECTION -->
-    <!-- <script src="/js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script src="/js/panzoom.js"></script>
-    <script src="/js/chart.js"></script> -->
+    <script src="/js/chart.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/main.min.js"></script>
+    <!-- <script src="/js/main.min.js"></script> -->
     <script src="/js/hammer.min.js"></script>
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", onDOMLoaded); 
